Refactored simulation, species, medicalstats structure